# temp-regulator

./: .gitignore  CMakeLists.txt  README.md  StubCooler.hpp  StubHeater.hpp  Thermostat.cpp  Thermostat.hpp  Thermostat_test.cpp
